# seju-face-lab

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
configs/: subject_intake.example.json
configs/agencies/: seju_like_agencies.json
configs/generation_updates/: agency_refinement_v1.json
configs/pipelines/: full-local-review.example.json  full-retinaface-review.example.json  generation-diffusers.example.json  generation-openai-image.example.json  generation-sweep.example.json  local_deterministic.json  sns-correlation.example.json  subject-review.example.json
configs/sources/: seju_official.json
data/: README.md
docs/: agency-image-versioning.md  agency-research-flow.md  architecture.md  consented-subject-intake.md  development.md  gpu-generation-log.md  research-tracking.md  sota-benchmark-research.md  strengthening-engine-review.md  strengthening-next-plan.md  web-source-strategy.md
docs/official-docs/: openai-image-generation-2026-06-15.md
scripts/: audit_research_data_quality.py  build_agency_site.py  generate_engagement_csv_template.py  merge_engagement.py  organize_by_talent.py
src/seju_face_lab/: __init__.py  agency.py  agency_centroid.py  backend_compare.py  backend_diagnostics.py  backends.py  benchmark_research.py  calibration.py  cli.py  correlation.py  drift.py  embeddings.py  enhancement.py  face_axes.py  generation.py  ingredients.py  metrics.py  model.py  model_audit.py  pipeline.py  precision.py  prompting.py  quality.py  rubric.py  run_reviews.py  sns_explorer.py  sns_metrics.py  sources.py  style.py  subject_vectors.py  vector_export.py  workers.py
tests/: test_analysis_modules.py  test_pipeline.py  test_sources.py
