[project]
name = "seju-face-lab"
version = "0.1.0"
description = "Local centroid extraction and generated-image evaluation for a curated seju-face image set."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "Pillow",
]

[project.optional-dependencies]
vision = [
  "opencv-python>=4.10",
]
face = [
  "insightface>=0.7",
  "onnxruntime-gpu>=1.18",
]
clip = [
  "open-clip-torch>=2.24",
]
analysis = [
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "matplotlib>=3.9",
]
all = [
  "opencv-python>=4.10",
  "insightface>=0.7",
  "onnxruntime-gpu>=1.18",
  "open-clip-torch>=2.24",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "matplotlib>=3.9",
]

[project.scripts]
seju-face-lab = "seju_face_lab.cli:main"

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
